--- a/assets/tpl/userop.html
+++ b/assets/tpl/userop.html
@@ -22,6 +22,7 @@
   <table class="table">
     <thead>
       <tr>
+        <td>员工编号</td>
         <td>账号</td>
         <td>姓名</td>
         <td>权限</td>
@@ -30,9 +31,22 @@
     </thead>
     <tbody>
       <tr ng-repeat="item in userArray track by $index">
-        <td>{{item.uid}}</td>
-        <td>{{item.name}}</td>
-        <td ng-bind="['财务查询','普通VP', '阿木', '运维人员'][item.permission]"></td>
+        <td>
+          <span ng-if="!item.edit">{{item.uno}}</span>
+          <input ng-if="item.edit" ng-change="edited($index)" type="input" ng-model="item.uno" style="border: 0;width:100%;">
+        </td>
+        <td>
+          <span ng-if="!item.edit">{{item.uid}}</span>
+          <input ng-if="item.edit" ng-change="edited($index)" type="input" ng-model="item.uid" style="border: 0;width:100%;">
+        </td>
+        <td>
+          <span ng-if="!item.edit">{{item.name}}</span>
+          <input ng-if="item.edit" ng-change="edited($index)" type="input" ng-model="item.name" style="border: 0;width:100%;">
+        </td>
+        <td>
+          <span ng-if="!item.edit" ng-bind="['财务查询','普通VP', '阿木', '运维人员'][item.permission]"></span>
+          <input ng-if="item.edit" ng-change="edited($index)" type="input" ng-model="item.permission" style="border: 0;width:100%;">
+        </td>
         <td><a ng-click="del($index)">[删除]</a><a ng-if="!(item.id>0)" ng-click="save($index)">[保存]</a>
         </td>
       </tr>
